# buzzlight

./: .gitignore  CMakeLists.txt  Makefile  README.md  buzzlight-dbus.c  buzzlight.c  buzzlight.h  main.c
include/buzz/: #CommandLineParser.h#  .#CommandLineParser.h  Backlight.h  CommandLineParser.h  DBus.h
include/buzz/DBus/: DBusObject.h  Object.h  Property.h
include/buzz/Daemon/: BacklightDaemon.h
lib/: Backlight.cpp  BacklightBase.cpp  CMakeLists.txt  CommandLineParser.cpp  DBus.cpp  OptionMap.cpp  OptionMap.h
lib/DBus/: DBusObject.cpp  Object.cpp  Property.cpp  buzzlight.c
lib/Daemon/: BacklightDaemon.cpp  BacklightDaemonObject.cpp  CMakeLists.txt  FileManager.cpp  main.cpp
playground/: CMP.cpp  CMakeLists.txt  DBusGetter.cpp  Frontend.cpp
tool/: CMakeLists.txt
tool/buzzlight-cmdl/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  main.cpp
tool/buzzlight-daemon/: BacklightDaemon.cpp  BacklightDaemon.h  BacklightDaemonObject.cpp  CMakeLists.txt  FileManager.h  git.felixnaredi.buzzlight.conf  main.cpp
